--- a/evite ultimate 2.html
+++ b/evite ultimate 2.html
@@ -73,15 +73,17 @@
 
     /* Festive font for English titles & names */
     h1[data-en], .names[data-en]{
+       text-align: center;
       font-family: 'Great Vibes', cursive;
       font-weight:400;
       font-size:36px;
     }
 
 h1[data-en], .body[data-en]{
+text-align: center;
       font-family: 'Great Vibes', cursive;
       font-weight:400;
-      font-size:20px;
+      font-size:24px;
     }
 
     .info{background:linear-gradient(180deg, rgba(233,196,106,0.06), transparent);padding:14px;border-radius:12px;margin-top:10px}
@@ -125,10 +127,10 @@ h1[data-en], .body[data-en]{
       <p data-bn="বিবাহ ও সংবর্ধনা অনুষ্ঠানে আপনার সদয় উপস্থিতি কামনা করছি" data-en="we request your gracious presence at the wedding and reception event of">we request your gracious presence at the wedding and reception event of </p>
       <div class="names" data-bn="ইন্দ্রনীল বসু" data-en="Indranil Basu">Indranil Basu</div>
 
- <div class="body" data-bn="প্রয়াত শ্রীমতি সুমনা বসু এবং শ্রী দীপঙ্কর বসুর পুত্র " data-en="Son of Late Mrs Sumana Basu and Mr Dipankar Basu">Son of Late Mrs Sumana Basu and Mr Dipankar Basu &  Sahelly Roy Chowdhury</div>
+ <div class="body" data-bn="প্রয়াত শ্রীমতি সুমনা বসু এবং শ্রী দীপঙ্কর বসুর পুত্র " data-en="Son of Late Mrs Sumana Basu and Mr Dipankar Basu">Son of Late Mrs Sumana Basu and Mr Dipankar Basu</div>
 
-<div class="names" data-bn="এবং সহেলী রায় চৌধুরী" data-en="& Sahelly Roy Chowdhury">& Sahelly Roy Chowdhury</div>
-
+<div class="names" data-bn="এবং" data-en="&">&</div>
+<div class="names" data-bn="সহেলী রায় চৌধুরী" data-en="Sahelly Roy Chowdhury">Sahelly Roy Chowdhury</div>
  <div class="body" data-bn="মিসেস লিনা রায় চৌধুরী এবং মিস্টার অমিতাভ রায় চৌধুরীর কন্যা " data-en="Daughter of Mrs Lina Roy Chowdhury and Mr Amitava Roy Chowdhury">Daughter of Mrs Lina Roy Chowdhury and Mr Amitava Roy Chowdhury</div>
 
 
