--- a/index.html
+++ b/index.html
@@ -330,17 +330,30 @@ text-align: center;
 
   <script>
 
-  // RSVP Modal
-    const rsvpBtn = document.getElementById("rsvpBtn");
-    const modal = document.getElementById("rsvpModal");
-    const closeBtn = document.getElementById("closeModal");
-    rsvpBtn.addEventListener("click", () => {
-      modal.style.display = "flex";
-      spawnHearts(rsvpBtn);
-    });
-    closeBtn.addEventListener("click", () => {
+ // RSVP Modal
+  const rsvpBtn = document.getElementById("rsvpBtn");
+  const modal = document.getElementById("rsvpModal");
+  const closeBtn = document.getElementById("closeModal");
+
+  rsvpBtn.addEventListener("click", () => {
+    modal.style.display = "flex";
+
+    // Smoothly scroll the modal into the center of the screen
+    setTimeout(() => {
+      modal.scrollIntoView({ behavior: "smooth", block: "center" });
+    }, 150);
+  });
+
+  closeBtn.addEventListener("click", () => {
+    modal.style.display = "none";
+  });
+
+  window.addEventListener("click", (e) => {
+    if (e.target === modal) {
       modal.style.display = "none";
-    });
+    }
+  });
+
 
    // Submit RSVP to Google Sheets
 const form = document.getElementById("rsvpForm");
