--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   text-align: center;
   transition: transform 0.2s ease, box-shadow 0.2s ease, background-position 0.2s ease;
   background-image: url('images/card_background.jpg');
-  background-size: cover;
+  background-size: 110% 110%;
   background-position: center;
 }
 
@@ -435,4 +435,5 @@ form.addEventListener("submit", async (e) => {
   </script>
 </body>
 </html>
+
 
