--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   justify-content: center;
   text-align: center;
   transition: transform 0.2s ease, box-shadow 0.2s ease, background-position 0.2s ease;
-  background-image: url('images/card_background.jpg');
+  background-image: url('images/card_background.gif');
   background-size: 110% 110%;
   background-position: center;
 }
@@ -435,5 +435,6 @@ form.addEventListener("submit", async (e) => {
   </script>
 </body>
 </html>
+
 
 
