--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   justify-content: center;
   text-align: center;
   transition: transform 0.2s ease, box-shadow 0.2s ease, background-position 0.2s ease;
-  background-image: url('images/card_background.gif');
+  background-image: url('images/card_background.jpg');
   background-size: 110% 110%;
   background-position: center;
 }
@@ -245,7 +245,8 @@ text-align: center;
 
     <div class="details">
       <div class="host" data-bn="বাসু পরিবারের তরফ থেকে," data-en="On behalf of the Basu family,"> On behalf of the Basu family,</div>
-      <div class="host" data-bn="বিবাহ ও সংবর্ধনা অনুষ্ঠানে আপনার সদয় উপস্থিতি কামনা করছি" data-en="We request your gracious presence at the wedding and reception event of">We request your gracious presence at the wedding and reception event of </div>
+      <div class="host" data-bn="বিবাহ ও সংবর্ধনা অনুষ্ঠানে" data-en="We request your gracious presence">We request your gracious presence</div>
+       <div class="host" data-bn="আপনার সদয় উপস্থিতি কামনা করছি" data-en="at the wedding and reception event of">at the wedding and reception event of </div>
       <div class="names" data-bn="ইন্দ্রনীল বসু" data-en="Indranil Basu">Indranil Basu</div>
 
  <div class="body" data-bn="প্রয়াত শ্রীমতি সুমনা বসু এবং শ্রী দীপঙ্কর বসুর পুত্র " data-en="Son of Late Mrs Sumana Basu and Mr Dipankar Basu">Son of Late Mrs Sumana Basu and Mr Dipankar Basu</div>
@@ -435,6 +436,7 @@ form.addEventListener("submit", async (e) => {
   </script>
 </body>
 </html>
+
 
 
 
