--- a/index.html
+++ b/index.html
@@ -251,16 +251,16 @@ text-align: center;
     </div>
 
     <div class="details">
-      <div class="host" data-bn="বাসু পরিবারের তরফ থেকে," data-en="On behalf of the Basu family,"> On behalf of the Basu family,</div>
+      <div class="host" data-bn="বাসু পরিবারের তরফ থেকে," data-en="On behalf of the Basu family,">On behalf of the Basu family,</div>
       <div class="host" data-bn="বিবাহ ও সংবর্ধনা অনুষ্ঠানে" data-en="We request your gracious presence">We request your gracious presence</div>
-       <div class="host" data-bn="আপনার সদয় উপস্থিতি কামনা করছি" data-en="at the wedding and reception event of">at the wedding and reception event of </div>
+       <div class="host" data-bn="আপনার সদয় উপস্থিতি কামনা করছি" data-en="at the wedding and reception event of">at the Marriage and Reception ceremony of</div>
       <div class="names" data-bn="ইন্দ্রনীল বসু" data-en="Indranil Basu">Indranil Basu</div>
 
- <div class="body" data-bn="প্রয়াত শ্রীমতি সুমনা বসু এবং শ্রী দীপঙ্কর বসুর পুত্র " data-en="Son of Late Mrs Sumana Basu and Mr Dipankar Basu">Son of Late Mrs Sumana Basu and Mr Dipankar Basu</div>
+ <div class="body" data-bn="প্রয়াত শ্রীমতি সুমনা বসু এবং শ্রী দীপঙ্কর বসুর পুত্র " data-en="S/o Late Mrs Sumana Basu and Mr Dipankar Basu">Son of Late Mrs Sumana Basu and Mr Dipankar Basu</div>
 
 <div class="names" data-bn="এবং" data-en="&">&</div>
 <div class="names" data-bn="সহেলী রায় চৌধুরী" data-en="Sahelly Roy Chowdhury">Sahelly Roy Chowdhury</div>
- <div class="body" data-bn="মিসেস লিনা রায় চৌধুরী এবং মিস্টার অমিতাভ রায় চৌধুরীর কন্যা " data-en="Daughter of Mrs Lina Roy Chowdhury and Mr Amitava Roy Chowdhury">Daughter of Mrs Lina Roy Chowdhury and Mr Amitava Roy Chowdhury</div>
+ <div class="body" data-bn="শ্রীমতি লিনা রায় চৌধুরী এবং শ্রী অমিতাভ রায় চৌধুরীর কন্যা " data-en="D/o Mrs Lina Roy Chowdhury and Mr Amitava Roy Chowdhury">Daughter of Mrs Lina Roy Chowdhury and Mr Amitava Roy Chowdhury</div>
 
   <!-- Event Stamps -->
   <div class="events">
@@ -456,6 +456,7 @@ document.getElementById('downloadjpgFileButton').addEventListener('click', funct
   </script>
 </body>
 </html>
+
 
 
 
