--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ text-align: center;
     </div>
 
 <div class="download-switch">
-      <button id="downloadjpgFileButton">download</button>
+      <button id="downloadjpgFileButton"><p data-bn="ডাউনলোড" data-en="Download">Download</p></button>
     </div>
     
     <div class="floral">
@@ -265,16 +265,16 @@ text-align: center;
   <!-- Event Stamps -->
   <div class="events">
     <div class="event wedding">
-      <h2>Wedding Ceremony</h2>
-      <p>Saturday, <b>24 January 2026</b><br/>Magh 10, 1432</p>
-      <p><a href="https://www.google.com/maps/search/?api=1&query=White%20Banquet%2C%20Lake%20Gardens%2C%20Kolkata%20700045" target="_blank">📍 White Banquet, Lake Gardens, Kolkata</a></p>
-      <p>Lake Garden, 162/B/280, opposite Arambagh food mart, Lake Gardens, Kolkata, West Bengal 700045</p>
+      <h2 data-bn="বিবাহ অনুষ্ঠান" data-en="Marriage Ceremony">Marriage Ceremony</h2>
+      <p data-bn="শনিবার, ২৪ জানুয়ারী ২০২৬" data-en="Saturday, 24 January 2026">Saturday, <b>24 January 2026</b></p>
+      <p data-bn="📍 হোয়াইট ব্যাঙ্কুয়েট, লেক গার্ডেন, কলকাতা" data-en="📍 White Banquet, Lake Gardens, Kolkata"><a href="https://www.google.com/maps/search/?api=1&query=White%20Banquet%2C%20Lake%20Gardens%2C%20Kolkata%20700045" target="_blank">📍 White Banquet, Lake Gardens, Kolkata</a></p>
+      <p data-bn="লেক গার্ডেন, ১৬২/বি/২৮০, আরামবাগ ফুড মার্টের বিপরীতে, লেক গার্ডেন, কলকাতা, পশ্চিমবঙ্গ ৭০০০৪৫" data-en="Lake Garden, 162/B/280, opposite Arambagh food mart, Lake Gardens, Kolkata, West Bengal 700045">Lake Garden, 162/B/280, opposite Arambagh food mart, Lake Gardens, Kolkata, West Bengal 700045</p>
     </div>
     <div class="event reception">
-      <h2>Reception</h2>
-      <p>Monday, <b>26 January 2026</b><br/>Magh 12, 1432</p>
-      <p><a href="https://www.google.com/maps/search/?api=1&query=The%20Conclave%20Verde%2C%20The%20Condoville%2C%20Kolkata%20700094" target="_blank">📍 Conclave Verde, Condoville, Kolkata</a></p>
-      <p>The Condoville, Budherhat Rd, 2052, Chak Garia, Panchasayar, Upohar, Kolkata, West Bengal 700094</p>
+      <h2 data-bn="রিসেপশন" data-en="Reception">Reception</h2>
+      <p data-bn="সোমবার, ২৬ জানুয়ারী ২০২৬" data-en="Monday, 26 January 2026">Monday, <b>26 January 2026</b></p>
+      <p data-bn="📍 কনক্লেভ ভার্দে, কন্ডোভিল, কলকাতা" data-en="📍 Conclave Verde, Condoville, Kolkata"><a href="https://www.google.com/maps/search/?api=1&query=The%20Conclave%20Verde%2C%20The%20Condoville%2C%20Kolkata%20700094" target="_blank">📍 Conclave Verde, Condoville, Kolkata</a></p>
+      <p data-bn="কন্ডোভিল, বুধেরহাট রোড, 2052, চাক গড়িয়া, পঞ্চসায়ার, উপোহার, কলকাতা, পশ্চিমবঙ্গ 700094" data-en="The Condoville, Budherhat Rd, 2052, Chak Garia, Panchasayar, Upohar, Kolkata, West Bengal 700094">The Condoville, Budherhat Rd, 2052, Chak Garia, Panchasayar, Upohar, Kolkata, West Bengal 700094</p>
     </div>
   </div>
 
@@ -456,6 +456,7 @@ document.getElementById('downloadjpgFileButton').addEventListener('click', funct
   </script>
 </body>
 </html>
+
 
 
 
