--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ text-align: center;
     <div class="details">
       <div class="host" data-bn="বাসু পরিবারের তরফ থেকে," data-en="On behalf of the Basu family,">On behalf of the Basu family,</div>
       <div class="host" data-bn="বিবাহ ও সংবর্ধনা অনুষ্ঠানে" data-en="We request your gracious presence">We request your gracious presence</div>
-       <div class="host" data-bn="আপনার সদয় উপস্থিতি কামনা করছি" data-en="at the wedding and reception event of">at the Marriage and Reception ceremony of</div>
+       <div class="host" data-bn="আপনার সদয় উপস্থিতি কামনা করছি" data-en="at the Marriage and Reception ceremony of">at the Marriage and Reception ceremony of</div>
       <div class="names" data-bn="ইন্দ্রনীল বসু" data-en="Indranil Basu">Indranil Basu</div>
 
  <div class="body" data-bn="প্রয়াত শ্রীমতি সুমনা বসু এবং শ্রী দীপঙ্কর বসুর পুত্র " data-en="S/o Late Mrs Sumana Basu and Mr Dipankar Basu">Son of Late Mrs Sumana Basu and Mr Dipankar Basu</div>
@@ -456,6 +456,7 @@ document.getElementById('downloadjpgFileButton').addEventListener('click', funct
   </script>
 </body>
 </html>
+
 
 
 
