--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta property="og:title" content="Indranil Weds Saheli"/>
+  <meta property="og:title" content="Indranil Weds Sahelly"/>
 <meta property="og:description" content="You Are Invited"/>
 <meta property="og:url" content=url('index.html')/>
 <meta property="og:image" content=url('images/preview.jpg')/>
-  <title>Wedding Invite — Bengali & English Switch</title>
+  <title>Wedding Invite — Indranil and Sahelly</title>
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Satisfy&family=Hind+Siliguri:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -460,6 +460,7 @@ document.getElementById('downloadjpgFileButton').addEventListener('click', funct
   </script>
 </body>
 </html>
+
 
 
 
